fixes #1 : Ajouter l’option « durée limitée (cours) »

--- a/public/web-app/modals/modalSchoolContent.html
+++ b/public/web-app/modals/modalSchoolContent.html
@@ -42,6 +42,10 @@
                 <input type="password" id="sshPasswordConfirm" ng-model="school.sshPasswordConfirm"
                        ng-required="school.ssh_password == 'ssh'">
             </md-input-container>
+            <md-input-container>
+                <label for="lessonDuration"><span translate="settings.school.lessonDuration"></span></label>
+                <input type="number" min="0" id="lessonDuration" ng-model="school.lessonDuration"/>
+            </md-input-container>
         </div>
     </md-content>
     <md-dialog-actions layout="row">
