--- a/public/web-app/settings/settings.html
+++ b/public/web-app/settings/settings.html
@@ -134,11 +134,14 @@
                         <table md-table  md-progress="schools.promise">
                             <thead md-head md-order="schoolTable.order">
                             <tr md-row>
-                                <th md-column style="width: 40%" md-order-by='schoolName'>
+                                <th md-column style="width: 30%" md-order-by='schoolName'>
                                     {{"settings.school.schoolName" | translate}}
                                 </th>
-                                <th md-column style="width: 50%" md-order-by='access_method'>
+                                <th md-column style="width: 40%" md-order-by='access_method'>
                                     {{"settings.school.access_method" | translate}}
+                                </th>
+                                <th md-column style="width: 20%" md-order-by='access_method'>
+                                    {{"settings.school.lessonDuration" | translate}}
                                 </th>
                                 <th md-column style="width: 10%">
                                     {{"settings.school.action" | translate}}
@@ -153,6 +156,9 @@
                                 </td>
                                 <td md-cell>
                                     <div>{{school.accessMethod}}</div>
+                                </td>
+                                <td md-cell>
+                                    <div>{{school.lessonDuration}}</div>
                                 </td>
                                 <td md-cell>
                                     <md-button class="md-warn tm-action-button" ng-click="deleteSchool(school.id)">
