--- a/public/web-app/modals/modalConfirmContent.html
+++ b/public/web-app/modals/modalConfirmContent.html
@@ -12,6 +12,7 @@
             <span translate="modals.removeSchedule" ng-show="action == 'removeSchedule'"></span><span> </span>
             <span translate="modals.removeUser" ng-show="action == 'removeUser'"></span><span> </span>
             <span translate="modals.disableWifiForClassroom" ng-show="action == 'disableWifiForClassroom'"></span><span> </span>
+            <span translate="modals.disableWifiForAllClassrooms" ng-show="action == 'disableWifiForAllClassrooms'"></span><span> </span>
             <span translate="modals.wifiDeactivation" ng-show="action == 'disableLesson'"></span><span> </span>
         </div>
     </md-dialog-content>
