--- a/public/web-app/classroom/classroom.html
+++ b/public/web-app/classroom/classroom.html
@@ -14,22 +14,12 @@
             <md-icon class="material-icons search-tool">search</md-icon>
             <label for="filter" translate="button.filter" style="bottom: 60px"></label>
             <input ng-model="table.filter" id="filter" ng-change="changeFilter()">
-        </md-input-container>        
+        </md-input-container>
     </div>
-    <div md-whiteframe="1" layout="column" layout-gt-sm="row" ng-hide="classroomsFiltered.length == 0" >
+    <div md-whiteframe="1" layout="column" layout-gt-sm="row" ng-hide="classroomsFiltered.length == 0">
         <md-input-container class="md-block search-tool" style="text-align: center; margin: 0; padding: 10px 0;">
-            <md-button 
-                class="md-raised" 
-                translate="button.activateWifiAll" 
-                aria-label="enable" 
-                ng-click="activateAll(classroomsFiltered)"
-            ></md-button>
-            <md-button 
-                class="md-raised"
-                translate="button.disableWifiAll" 
-                aria-label="disable"
-                ng-click="deactivateAll(classroomsFiltered)"
-            ></md-button>
+            <md-button class="md-raised" translate="button.activateWifiAll" aria-label="enable" ng-click="activateAll(classroomsFiltered)"></md-button>
+            <md-button class="md-raised" translate="button.disableWifiAll" aria-label="disable" ng-click="deactivateAll(classroomsFiltered)"></md-button>
         </md-input-container>
     </div>
 
@@ -47,12 +37,10 @@
                     </md-progress-circular>
                 </div>
                 <md-content class="md-padding" ng-show="isLoaded()">
-                    <md-grid-list
-                            md-cols-xs="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4"
-                            md-row-height="200px"
-                            md-gutter="20px" md-gutter-gt-sm="20px">
+                    <md-grid-list md-cols-xs="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height="200px"
+                        md-gutter="20px" md-gutter-gt-sm="20px">
                         <md-grid-tile ng-repeat="classroom in classroomsFiltered | orderBy: 'classroomName'"
-                                      md-whiteframe="5" style="background-color: rgb(30,136,229);">
+                            md-whiteframe="5" style="background-color: rgb(30,136,229);">
                             <md-grid-tile-header>
                                 <div class="md-toolbar-tools">
                                     <h2>{{classroom.classroomName}}</h2>
@@ -65,10 +53,13 @@
                             </div>
                             <md-grid-tile-footer>
                                 <md-dialog-actions layout="row">
-                                    <md-button class="md-raised" translate="button.plan" aria-label="plan"></md-button>
-                                <md-button class="md-raised" ng-show="!classroom.wifiEnabled" translate="button.enable" ng-click="activation(classroom)" aria-label="enable"></md-button>
-                                <md-button class="md-raised" ng-show="classroom.wifiEnabled" translate="button.disable" ng-click="deactivation(classroom)" aria-label="disable"></md-button>
-                                    </md-dialog-actions>
+                                    <md-button class="md-raised" translate="button.plan" 
+                                    ng-click="planSchedule(classroom)" aria-label="plan"></md-button>
+                                    <md-button class="md-raised" ng-show="!classroom.wifiEnabled" translate="button.enable"
+                                        ng-click="activation(classroom)" aria-label="enable"></md-button>
+                                    <md-button class="md-raised" ng-show="classroom.wifiEnabled" translate="button.disable"
+                                        ng-click="deactivation(classroom)" aria-label="disable"></md-button>
+                                </md-dialog-actions>
                             </md-grid-tile-footer>
                         </md-grid-tile>
                     </md-grid-list>
