--- a/public/web-app/modals/modalScheduleContent.html
+++ b/public/web-app/modals/modalScheduleContent.html
@@ -1,9 +1,7 @@
 <md-dialog aria-label="List dialog" style="min-width: 300px; width: 760px;">
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2 ng-show="classroom == null" translate="schedule.genericTitle"></h2>
-
-            <h2 ng-show="classroom != null">{{'schedule.classroomTitle' | translate}} {{classroom.classroomName}}</h2>
+            <h2>{{'schedule.classroomTitle' | translate}} {{classroomName}}</h2>
         </div>
     </md-toolbar>
     <div ng-show="!isWorking"
@@ -11,13 +9,6 @@
     <md-progress-linear ng-show="isWorking" md-mode="indeterminate"
                         class="md-accent"></md-progress-linear>
     <md-content layout="column" layout-padding>
-        <md-input-container ng-show="schedule.id == null" class="md-block">
-            <label for="classroom"><span translate="schedule.classroom"></span>
-                <span style="color: red">*</span></label>
-            <md-select id="classroom" ng-model="schedule.ClassroomId">
-                <md-option ng-repeat="classroom in classrooms" ng-value="classroom.id">{{classroom.classroomName}}</md-option>
-            </md-select>
-        </md-input-container>
         <div>
 
             <time-date-picker id="startDate"
@@ -53,6 +44,15 @@
                                       data-display-twentyfour="true"
                                       data-mindate=minDate>
                     </time-date-picker>
+            </div>
+            <md-radio-button value="duringMultipleLesson" class="md-primary" aria-label="duringMultipleLesson">
+                <span translate="classroom.duringMultipleLesson"></span>
+            </md-radio-button>
+            <div ng-show="schedule.activation == 'duringMultipleLesson'">
+                <md-input-container style="width: 100%">
+                    <label translate="classroom.lessonNumberValue"></label>
+                    <input type="number" min="1" max="3" ng-model="schedule.lessonNumberValue" aria-label="lesson_number_value"/>
+                </md-input-container>
             </div>
 
         </md-radio-group>
