change modal trads

--- a/public/web-app/modals/modalConfirmContent.html
+++ b/public/web-app/modals/modalConfirmContent.html
@@ -1,12 +1,12 @@
 <md-dialog aria-label="List dialog">
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2 translate="modals.confirm"></h2>
+            <h2 translate="modal.confirm"></h2>
         </div>
     </md-toolbar>
     <md-dialog-content>
         <div class="md-dialog-content">
-            <span>{{ 'modals.' + action | translate }}</span><span> </span>
+            <span>{{ 'modal.' + action | translate }}</span><span> </span>
         </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
