--- a/public/web-app/modals/modalConfirmContent.html
+++ b/public/web-app/modals/modalConfirmContent.html
@@ -6,7 +6,7 @@
     </md-toolbar>
     <md-dialog-content>
         <div class="md-dialog-content">
-            <span>{{ 'modal.' + action | translate }}</span><span> </span>
+            <span translate="{{action}}"></span><span></span>
         </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
