--- a/public/web-app/modals/modalApiContent.html
+++ b/public/web-app/modals/modalApiContent.html
@@ -8,13 +8,25 @@
          style="background-color: rgb(76,175,80); height: 5px; width: 100%"></div>
     <md-progress-linear ng-show="isWorking" md-mode="indeterminate"
                         class="md-accent"></md-progress-linear>
-    <md-content layout="column">
+    <md-content layout="column" layout-padding>
         <md-input-container>
             <label><span translate="settings.api.link_api_text"></span></label>
-            <md-select ng-model="schoolId" aria-label="Schools" ng-selected="schoolId">
+            <md-select ng-model="api.SchoolId" aria-label="Schools" ng-selected="schoolId">
                 <md-option ng-repeat="school in schools" value="{{school.id}}">{{school.schoolName}}</md-option>
             </md-select>
         </md-input-container>
+        <md-input-container>
+            <label><span>vhmId</span></label>
+            <input type="text" ng-model="api.vhmId" aria-label="vhmId"/>
+        </md-input-container>       
+        <md-input-container>
+            <label><span>vpcUrl</span></label>
+            <input type="text" ng-model="api.vpcUrl" aria-label="vpcUrl"/>
+        </md-input-container>       
+        <md-input-container>
+            <label><span>accessToken</span></label>
+            <input type="text" ng-model="api.accessToken" aria-label="accessToken"/>
+        </md-input-container>        
     </md-content>
     <md-dialog-actions layout="row">
         <md-button translate="button.cancel_button" aria-label="cancel" ng-click="cancel()"></md-button>
